src/documentBackend/antlr4/braneParser.cpp

// Generated from /home/wirewhiz/CLionProjects/BraneScript/antlr4/brane.g4 by ANTLR 4.13.1


#include "braneVisitor.h"

#include "braneParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BraneParserStaticData final {
  BraneParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BraneParserStaticData(const BraneParserStaticData&) = delete;
  BraneParserStaticData(BraneParserStaticData&&) = delete;
  BraneParserStaticData& operator=(const BraneParserStaticData&) = delete;
  BraneParserStaticData& operator=(BraneParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag braneParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
BraneParserStaticData *braneParserStaticData = nullptr;

void braneParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (braneParserStaticData != nullptr) {
    return;
  }
#else
  assert(braneParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BraneParserStaticData>(
    std::vector<std::string>{
      "modules", "tags", "module", "module_item", "imports", "exports", 
      "mod_import", "mod_export", "global", "templateDefArg", "templateDef", 
      "templateArg", "templateArgs", "scopedID", "type", "valueType", "refType", 
      "sliceType", "declaration", "argumentListItem", "argumentList", "argumentPackItem", 
      "argumentPack", "bracketOpr", "functionSig", "functionStub", "function", 
      "capturedVar", "varCapture", "structDef", "structMember", "expressions", 
      "expression", "switchCase", "matchCase", "magicFunction"
    },
    std::vector<std::string>{
      "", "'['", "','", "']'", "'module'", "'imports'", "'{'", "'}'", "'exports'", 
      "';'", "'memory'", "'typedef'", "'...'", "'template'", "'<'", "'>'", 
      "'lambda'", "'::'", "'&'", "'mut'", "'('", "')'", "'constexpr'", "'opr'", 
      "'=='", "'!='", "'<='", "'>='", "'!'", "'const'", "'ext'", "'packed'", 
      "'struct'", "'return'", "'if'", "'else'", "'while'", "'for'", "'switch'", 
      "'match'", "'++'", "'--'", "'.'", "'as'", "'='", "'case'", "'default'", 
      "'sizeof'", "'fail'", "", "", "", "", "", "", "", "", "", "", "'*'", 
      "'/'", "'+'", "'-'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "COMMENT", 
      "NEWLINE", "BLOCK_COMMENT", "SPACE", "BOOL", "INT", "FLOAT", "CHAR", 
      "STRING", "ID", "MUL", "DIV", "ADD", "SUB", "LOGIC"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  braneParserStaticData = staticData.release();
}

}

braneParser::braneParser(TokenStream *input) : braneParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

braneParser::braneParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  braneParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *braneParserStaticData->atn, braneParserStaticData->decisionToDFA, braneParserStaticData->sharedContextCache, options);
}

braneParser::~braneParser() {
  delete _interpreter;
}

const atn::ATN& braneParser::getATN() const {
  return *braneParserStaticData->atn;
}

std::string braneParser::getGrammarFileName() const {
  return "brane.g4";
}

const std::vector<std::string>& braneParser::getRuleNames() const {
  return braneParserStaticData->ruleNames;
}

const dfa::Vocabulary& braneParser::getVocabulary() const {
  return braneParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView braneParser::getSerializedATN() const {
  return braneParserStaticData->serializedATN;
}


//----------------- ModulesContext ------------------------------------------------------------------

braneParser::ModulesContext::ModulesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<braneParser::ModuleContext *> braneParser::ModulesContext::module() {
  return getRuleContexts<braneParser::ModuleContext>();
}

braneParser::ModuleContext* braneParser::ModulesContext::module(size_t i) {
  return getRuleContext<braneParser::ModuleContext>(i);
}

tree::TerminalNode* braneParser::ModulesContext::EOF() {
  return getToken(braneParser::EOF, 0);
}


size_t braneParser::ModulesContext::getRuleIndex() const {
  return braneParser::RuleModules;
}


std::any braneParser::ModulesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitModules(this);
  else
    return visitor->visitChildren(this);
}

braneParser::ModulesContext* braneParser::modules() {
  ModulesContext *_localctx = _tracker.createInstance<ModulesContext>(_ctx, getState());
  enterRule(_localctx, 0, braneParser::RuleModules);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == braneParser::T__0

    || _la == braneParser::T__3) {
      setState(72);
      module();
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(78);
      match(braneParser::EOF);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TagsContext ------------------------------------------------------------------

braneParser::TagsContext::TagsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> braneParser::TagsContext::STRING() {
  return getTokens(braneParser::STRING);
}

tree::TerminalNode* braneParser::TagsContext::STRING(size_t i) {
  return getToken(braneParser::STRING, i);
}


size_t braneParser::TagsContext::getRuleIndex() const {
  return braneParser::RuleTags;
}


std::any braneParser::TagsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitTags(this);
  else
    return visitor->visitChildren(this);
}

braneParser::TagsContext* braneParser::tags() {
  TagsContext *_localctx = _tracker.createInstance<TagsContext>(_ctx, getState());
  enterRule(_localctx, 2, braneParser::RuleTags);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(braneParser::T__0);
    setState(90);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == braneParser::STRING) {
      setState(82);
      antlrcpp::downCast<TagsContext *>(_localctx)->tag = match(braneParser::STRING);
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == braneParser::T__1) {
        setState(83);
        match(braneParser::T__1);
        setState(84);
        antlrcpp::downCast<TagsContext *>(_localctx)->tag = match(braneParser::STRING);
        setState(89);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(92);
    match(braneParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleContext ------------------------------------------------------------------

braneParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* braneParser::ModuleContext::STRING() {
  return getToken(braneParser::STRING, 0);
}

std::vector<braneParser::Module_itemContext *> braneParser::ModuleContext::module_item() {
  return getRuleContexts<braneParser::Module_itemContext>();
}

braneParser::Module_itemContext* braneParser::ModuleContext::module_item(size_t i) {
  return getRuleContext<braneParser::Module_itemContext>(i);
}

braneParser::TagsContext* braneParser::ModuleContext::tags() {
  return getRuleContext<braneParser::TagsContext>(0);
}


size_t braneParser::ModuleContext::getRuleIndex() const {
  return braneParser::RuleModule;
}


std::any braneParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

braneParser::ModuleContext* braneParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 4, braneParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == braneParser::T__0) {
      setState(94);
      antlrcpp::downCast<ModuleContext *>(_localctx)->modTags = tags();
    }
    setState(97);
    match(braneParser::T__3);
    setState(98);
    antlrcpp::downCast<ModuleContext *>(_localctx)->id = match(braneParser::STRING);
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == braneParser::T__4

    || _la == braneParser::T__7) {
      setState(99);
      module_item();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Module_itemContext ------------------------------------------------------------------

braneParser::Module_itemContext::Module_itemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

braneParser::ImportsContext* braneParser::Module_itemContext::imports() {
  return getRuleContext<braneParser::ImportsContext>(0);
}

braneParser::ExportsContext* braneParser::Module_itemContext::exports() {
  return getRuleContext<braneParser::ExportsContext>(0);
}


size_t braneParser::Module_itemContext::getRuleIndex() const {
  return braneParser::RuleModule_item;
}


std::any braneParser::Module_itemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitModule_item(this);
  else
    return visitor->visitChildren(this);
}

braneParser::Module_itemContext* braneParser::module_item() {
  Module_itemContext *_localctx = _tracker.createInstance<Module_itemContext>(_ctx, getState());
  enterRule(_localctx, 6, braneParser::RuleModule_item);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case braneParser::T__4: {
        enterOuterAlt(_localctx, 1);
        setState(105);
        imports();
        break;
      }

      case braneParser::T__7: {
        enterOuterAlt(_localctx, 2);
        setState(106);
        exports();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportsContext ------------------------------------------------------------------

braneParser::ImportsContext::ImportsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<braneParser::Mod_importContext *> braneParser::ImportsContext::mod_import() {
  return getRuleContexts<braneParser::Mod_importContext>();
}

braneParser::Mod_importContext* braneParser::ImportsContext::mod_import(size_t i) {
  return getRuleContext<braneParser::Mod_importContext>(i);
}


size_t braneParser::ImportsContext::getRuleIndex() const {
  return braneParser::RuleImports;
}


std::any braneParser::ImportsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitImports(this);
  else
    return visitor->visitChildren(this);
}

braneParser::ImportsContext* braneParser::imports() {
  ImportsContext *_localctx = _tracker.createInstance<ImportsContext>(_ctx, getState());
  enterRule(_localctx, 8, braneParser::RuleImports);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(braneParser::T__4);
    setState(110);
    match(braneParser::T__5);
    setState(114);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == braneParser::T__3

    || _la == braneParser::T__9) {
      setState(111);
      mod_import();
      setState(116);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(117);
    match(braneParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExportsContext ------------------------------------------------------------------

braneParser::ExportsContext::ExportsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<braneParser::Mod_exportContext *> braneParser::ExportsContext::mod_export() {
  return getRuleContexts<braneParser::Mod_exportContext>();
}

braneParser::Mod_exportContext* braneParser::ExportsContext::mod_export(size_t i) {
  return getRuleContext<braneParser::Mod_exportContext>(i);
}


size_t braneParser::ExportsContext::getRuleIndex() const {
  return braneParser::RuleExports;
}


std::any braneParser::ExportsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitExports(this);
  else
    return visitor->visitChildren(this);
}

braneParser::ExportsContext* braneParser::exports() {
  ExportsContext *_localctx = _tracker.createInstance<ExportsContext>(_ctx, getState());
  enterRule(_localctx, 10, braneParser::RuleExports);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(braneParser::T__7);
    setState(120);
    match(braneParser::T__5);
    setState(124);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 288230382607081474) != 0)) {
      setState(121);
      mod_export();
      setState(126);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(127);
    match(braneParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Mod_importContext ------------------------------------------------------------------

braneParser::Mod_importContext::Mod_importContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t braneParser::Mod_importContext::getRuleIndex() const {
  return braneParser::RuleMod_import;
}

void braneParser::Mod_importContext::copyFrom(Mod_importContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ImportModuleContext ------------------------------------------------------------------

tree::TerminalNode* braneParser::ImportModuleContext::STRING() {
  return getToken(braneParser::STRING, 0);
}

braneParser::ImportModuleContext::ImportModuleContext(Mod_importContext *ctx) { copyFrom(ctx); }


std::any braneParser::ImportModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitImportModule(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ImportMemoryContext ------------------------------------------------------------------

tree::TerminalNode* braneParser::ImportMemoryContext::STRING() {
  return getToken(braneParser::STRING, 0);
}

braneParser::ImportMemoryContext::ImportMemoryContext(Mod_importContext *ctx) { copyFrom(ctx); }


std::any braneParser::ImportMemoryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitImportMemory(this);
  else
    return visitor->visitChildren(this);
}
braneParser::Mod_importContext* braneParser::mod_import() {
  Mod_importContext *_localctx = _tracker.createInstance<Mod_importContext>(_ctx, getState());
  enterRule(_localctx, 12, braneParser::RuleMod_import);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(135);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case braneParser::T__3: {
        _localctx = _tracker.createInstance<braneParser::ImportModuleContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(129);
        match(braneParser::T__3);
        setState(130);
        antlrcpp::downCast<ImportModuleContext *>(_localctx)->id = match(braneParser::STRING);
        setState(131);
        match(braneParser::T__8);
        break;
      }

      case braneParser::T__9: {
        _localctx = _tracker.createInstance<braneParser::ImportMemoryContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(132);
        match(braneParser::T__9);
        setState(133);
        antlrcpp::downCast<ImportMemoryContext *>(_localctx)->id = match(braneParser::STRING);
        setState(134);
        match(braneParser::T__8);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Mod_exportContext ------------------------------------------------------------------

braneParser::Mod_exportContext::Mod_exportContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

braneParser::FunctionContext* braneParser::Mod_exportContext::function() {
  return getRuleContext<braneParser::FunctionContext>(0);
}

braneParser::StructDefContext* braneParser::Mod_exportContext::structDef() {
  return getRuleContext<braneParser::StructDefContext>(0);
}

braneParser::GlobalContext* braneParser::Mod_exportContext::global() {
  return getRuleContext<braneParser::GlobalContext>(0);
}


size_t braneParser::Mod_exportContext::getRuleIndex() const {
  return braneParser::RuleMod_export;
}


std::any braneParser::Mod_exportContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitMod_export(this);
  else
    return visitor->visitChildren(this);
}

braneParser::Mod_exportContext* braneParser::mod_export() {
  Mod_exportContext *_localctx = _tracker.createInstance<Mod_exportContext>(_ctx, getState());
  enterRule(_localctx, 14, braneParser::RuleMod_export);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(137);
      function();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(138);
      structDef();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(139);
      global();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalContext ------------------------------------------------------------------

braneParser::GlobalContext::GlobalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

braneParser::TypeContext* braneParser::GlobalContext::type() {
  return getRuleContext<braneParser::TypeContext>(0);
}

tree::TerminalNode* braneParser::GlobalContext::ID() {
  return getToken(braneParser::ID, 0);
}


size_t braneParser::GlobalContext::getRuleIndex() const {
  return braneParser::RuleGlobal;
}


std::any braneParser::GlobalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitGlobal(this);
  else
    return visitor->visitChildren(this);
}

braneParser::GlobalContext* braneParser::global() {
  GlobalContext *_localctx = _tracker.createInstance<GlobalContext>(_ctx, getState());
  enterRule(_localctx, 16, braneParser::RuleGlobal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    type();
    setState(143);
    antlrcpp::downCast<GlobalContext *>(_localctx)->id = match(braneParser::ID);
    setState(144);
    match(braneParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TemplateDefArgContext ------------------------------------------------------------------

braneParser::TemplateDefArgContext::TemplateDefArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* braneParser::TemplateDefArgContext::ID() {
  return getToken(braneParser::ID, 0);
}

braneParser::TypeContext* braneParser::TemplateDefArgContext::type() {
  return getRuleContext<braneParser::TypeContext>(0);
}


size_t braneParser::TemplateDefArgContext::getRuleIndex() const {
  return braneParser::RuleTemplateDefArg;
}


std::any braneParser::TemplateDefArgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitTemplateDefArg(this);
  else
    return visitor->visitChildren(this);
}

braneParser::TemplateDefArgContext* braneParser::templateDefArg() {
  TemplateDefArgContext *_localctx = _tracker.createInstance<TemplateDefArgContext>(_ctx, getState());
  enterRule(_localctx, 18, braneParser::RuleTemplateDefArg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case braneParser::T__0:
      case braneParser::T__15:
      case braneParser::T__17:
      case braneParser::ID: {
        setState(146);
        antlrcpp::downCast<TemplateDefArgContext *>(_localctx)->exprType = type();
        break;
      }

      case braneParser::T__10: {
        setState(147);
        antlrcpp::downCast<TemplateDefArgContext *>(_localctx)->isTypedef = match(braneParser::T__10);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(151);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == braneParser::T__11) {
      setState(150);
      antlrcpp::downCast<TemplateDefArgContext *>(_localctx)->isPack = match(braneParser::T__11);
    }
    setState(153);
    antlrcpp::downCast<TemplateDefArgContext *>(_localctx)->id = match(braneParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TemplateDefContext ------------------------------------------------------------------

braneParser::TemplateDefContext::TemplateDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<braneParser::TemplateDefArgContext *> braneParser::TemplateDefContext::templateDefArg() {
  return getRuleContexts<braneParser::TemplateDefArgContext>();
}

braneParser::TemplateDefArgContext* braneParser::TemplateDefContext::templateDefArg(size_t i) {
  return getRuleContext<braneParser::TemplateDefArgContext>(i);
}


size_t braneParser::TemplateDefContext::getRuleIndex() const {
  return braneParser::RuleTemplateDef;
}


std::any braneParser::TemplateDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<braneVisitor*>(visitor))
    return parserVisitor->visitTemplateDef(this);
  else
    return visitor->visitChildren(this);
}

braneParser::TemplateDefContext* braneParser::templateDef() {
  TemplateDefContext *_localctx = _tracker.createInstance<TemplateDefContext>(_ctx, getState());
  enterRule(_localctx, 20, braneParser::RuleTemplateDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    match(braneParser::T__12);
    setState(156);
    match(braneParser::T__13);
    setState(157);
    templateDefArg();
    setState(162);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == braneParser::T__1) {
      setState(158);
      match(braneParser::T__1);
      setState(159);
      templateDefArg();
      setState(164);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(165);
    match(braneParser::T__14);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TemplateArgContext ------------------------------------------------------------------

braneParser::TemplateArgContext::TemplateArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

